# wealth

./: .env.example  .gitignore  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml
src/wealth/: __init__.py
src/wealth/api/: server.py
src/wealth/cli/: account.py  chart.py  context_cmd.py  export_cmd.py  import_cmd.py  report.py  tx.py  ui.py
src/wealth/core/: config.py  context.py  valuation.py
src/wealth/datasources/: __init__.py  base.py  coinmarketcap.py  generic_csv.py  registry.py
src/wealth/db/: __init__.py  engine.py  models.py  repo.py
src/wealth/io/: charts.py  pdf_report.py
src/wealth/ui/: package-lock.json  package.json
src/wealth/ui/app/: globals.css  layout.tsx  page.tsx
src/wealth/ui/components/: account-multi-select.tsx  app-sidebar.tsx  nav-main.tsx  site-header.tsx  transactions-table.tsx  wealth-allocation.tsx  wealth-kpis.tsx  wealth-latest.tsx  wealth-pnl.tsx  wealth-top-assets.tsx  wealth-volume.tsx
src/wealth_os/: __init__.py
src/wealth_os/api/: server.py
src/wealth_os/cli/: account.py  chart.py  context_cmd.py  export_cmd.py  import_cmd.py  report.py  tx.py
src/wealth_os/core/: valuation.py
src/wealth_os/datasources/: base.py  coindesk_legacy.py  generic_csv.py
src/wealth_os/db/: repo.py
src/wealth_os/io/: charts.py  pdf_report.py
src/wealth_os/ui/: package-lock.json
src/wealth_os/ui/app/: layout.tsx
src/wealth_os/ui/components/: edit-transaction-dialog.tsx  transactions-table.tsx  wealth-kpis.tsx
src/wealth_os/ui/lib/: api.ts
tests/: conftest.py  test_csv_import_export.py  test_repo.py  test_valuation.py
(+7 files in other folders)
