[project]
name = "wealth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chandralegend", email = "irugalbandarachandra@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sqlmodel>=0.0.27",
    "typer>=0.19.2",
    "python-dotenv>=1.0.1",
    "rich>=14.2.0",
    "reportlab>=4.4.4",
]

[project.scripts]
wealth = "wealth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
